# rust-app

./: .dockerignore  .env  .env.example  .gitignore  API.md  Cargo.toml  Claude.md  Dockerfile  LICENSE  Makefile  README.md  cloudflared.md  docker-compose.yml  push.sh
migrations/: 20260711113801_create_user_table.sql  20260711113801_user.sql  20260711113900_add_password_to_user.sql  20260711114000_create_task_table.sql  20260711114000_task.sql  20260714120000_add_github_id_to_user.sql  20260714130000_add_profile_fields_to_user.sql  20260714140000_create_message_table.sql  20260714140000_group.sql  20260714140100_message.sql  20260714191000_add_unique_username.sql  20260714220000_optimize_message_user_info.sql  20260714223000_add_group_contacts.sql  20260715100000_message_client_id.sql  20260715110000_moment.sql  20260715153000_moment_processing.sql  20260716003000_moment_processing_progress.sql  20260716010000_moment_comment.sql  20260716010100_moment_like.sql  20260716010200_moment_view.sql  20260716010300_moment_visitor_view.sql  20260716220000_music.sql  20260716230000_music_processing.sql  20260717143000_music_deduplication.sql  20260717195500_music_list_pagination.sql  20260717200500_music_favorite_pagination.sql  20260717210000_music_user_favorite.sql  20260717230000_user_plan.sql  20260717231000_user_subscription.sql  20260717233000_subscription_orders_and_system_user.sql  20260718164500_user_roles.sql  20260718173000_subscription_status_default_empty.sql  20260719190000_video.sql  20260720113000_video_upload_state.sql  20260720143000_video_resumable_uploads.sql  20260720150000_video_upload_size_6gb.sql  20260720160000_video_collection_include_favorites.sql  20260720161000_video_dynamic_collections.sql  20260720162000_backfill_video_description_categories.sql  20260720193000_video_view_sessions.sql  (+2 more)
scripts/: load-test.sh
src/: main.rs
src/app/: mod.rs  router.rs  runtime.rs  state.rs
src/common/: assets.rs  response.rs
src/config/: jwt.rs  logger.rs  mod.rs
src/database/: postgres.rs  redis.rs
src/handles/: auth.rs  message.rs  mod.rs  moment.rs  music.rs  subscription.rs  system.rs  task.rs  user.rs  video.rs
src/middleware/: concurrency.rs  cors.rs  jwt.rs  logger.rs  mod.rs  plan.rs
src/models/: message.rs  mod.rs  moment.rs  music.rs  task.rs  user.rs  video.rs
src/services/: message_hub.rs  mod.rs  ncm.rs
