[package]
name = "rust-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
redis = { version = "0.28", features = ["tokio-comp"] }
jsonwebtoken = "9"
bcrypt = "0.16"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.7.0", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
