[package]
name = "rust-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
axum-extra = { version = "0.10", features = ["cookie"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
redis = { version = "0.28", features = ["tokio-comp"] }
jsonwebtoken = "9"
bcrypt = "0.16"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tower-http = { version = "0.7.0", features = ["cors", "fs", "set-header"] }
tower = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
